UI-3230 [Forum] Alignment Bugs on some screens

--- a/forum/webapp/src/main/webapp/skin/less/popup/Style.less
+++ b/forum/webapp/src/main/webapp/skin/less/popup/Style.less
@@ -118,6 +118,10 @@
 .uiImportForm {
 	.uploadButton {
 		text-align: center;
+		.noFile {
+			margin-bottom: 0;
+			vertical-align: middle;
+		}
 	}
 }
 
